manifests/lagoon-remote-0.90.0.tgz-manifest.yaml
---
# Source: lagoon-remote/templates/docker-host.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-release-lagoon-remote-docker-host
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/component: my-release-lagoon-remote-docker-host
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/environment
          operator: Exists
      podSelector:
        matchExpressions:
        - key: lagoon.sh/buildName
          operator: Exists
  podSelector:
    matchLabels:
      app.kubernetes.io/name: lagoon-remote
      app.kubernetes.io/component: my-release-lagoon-remote-docker-host
      app.kubernetes.io/instance: my-release
  policyTypes:
  - Ingress
---
# Source: lagoon-remote/templates/application-logs.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-logs
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ExternalName
  externalName: "lagoon-logging-logs-dispatcher.lagoon-logging.svc.cluster.local"
---
# Source: lagoon-remote/templates/docker-host.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-host
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/component: my-release-lagoon-remote-docker-host
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 2375
      targetPort: docker-daemon
      protocol: TCP
      name: docker-daemon
  selector:
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/component: my-release-lagoon-remote-docker-host
    app.kubernetes.io/instance: my-release
---
# Source: lagoon-remote/templates/router-logs.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-logs
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  type: ExternalName
  externalName: "lagoon-logging-logs-dispatcher.lagoon-logging.svc.cluster.local"
---
# Source: lagoon-remote/templates/docker-host.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-lagoon-remote-docker-host
  namespace: "default"
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/component: my-release-lagoon-remote-docker-host
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lagoon-remote
      app.kubernetes.io/component: my-release-lagoon-remote-docker-host
      app.kubernetes.io/instance: my-release
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lagoon-remote
        app.kubernetes.io/component: my-release-lagoon-remote-docker-host
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-lagoon-remote-docker-host
      securityContext:
        {}
      containers:
      - name: docker-host
        securityContext:
          privileged: true
          seLinuxOptions:
            type: spc_t
        image: "uselagoon/docker-host:v3.5.0"
        imagePullPolicy: Always
        ports:
        - containerPort: 2375
          protocol: TCP
          name: docker-daemon
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 2375
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 2375
          timeoutSeconds: 1
        resources:
          {}
        volumeMounts:
        - mountPath: /var/lib/docker
          name: docker-lib
      volumes:
      - name: docker-lib
        persistentVolumeClaim:
          claimName: my-release-lagoon-remote-docker-host
      tolerations:
      - effect: NoSchedule
        key: lagoon/build
        operator: Exists
      - effect: PreferNoSchedule
        key: lagoon/build
        operator: Exists
      - effect: NoSchedule
        key: lagoon.sh/build
        operator: Exists
      - effect: PreferNoSchedule
        key: lagoon.sh/build
        operator: Exists
---
# Source: lagoon-remote/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-lagoon-remote-docker-host-test-connection"
  labels:
    helm.sh/chart: lagoon-remote-0.90.0
    app.kubernetes.io/name: lagoon-remote
    app.kubernetes.io/component: my-release-lagoon-remote-docker-host
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
  - name: nc
    image: busybox
    command: ['nc']
    args:
    - "-zvw5"
    - "docker-host"
    - "2375"
  restartPolicy: Never
